--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,8 +43,8 @@ jobs:
       - name: Run linter (check only)
         run: pnpm run lint:check
 
-      - name: Check code formatting
-        run: pnpm run format:check
+      - name: Format code
+        run: pnpm run format
 
       - name: Build project
         run: pnpm run build
