--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,5 +63,5 @@ jobs:
       - name: Run unit tests
         run: pnpm run test
 
-      - name: Run E2E tests
-        run: pnpm run test:e2e
+      # - name: Run E2E tests
+      #   run: pnpm run test:e2e
