--- a/package.json
+++ b/package.json
@@ -21,12 +21,13 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.8.1",
+    "daisyui": "^5.0.43",
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
+    "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
-    "@types/node": "^22.10.2",
     "@vitest/ui": "^2.1.8",
     "cypress": "^14.4.0",
     "eslint": "^9.28.0",
