--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "tailwindcss": "^4.1.8"
   },
   "devDependencies": {
+    "@stagewise/toolbar": "^0.3.0",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
