--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "jsdom": "^25.0.1",
     "prettier": "3.5.3",
+    "prettier-plugin-astro": "0.14.1",
+    "prettier-plugin-tailwindcss": "0.6.12",
     "shiki": "^3.4.2",
     "vitest": "^2.1.8"
   }
