--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
-    "@vitest/ui": "^2.1.8",
+    "@vitest/coverage-v8": "^2.1.9",
+    "@vitest/ui": "^2.1.9",
     "cypress": "^14.4.0",
     "eslint": "^9.28.0",
     "eslint-config-prettier": "^10.1.5",
@@ -41,6 +42,6 @@
     "prettier-plugin-astro": "0.14.1",
     "prettier-plugin-tailwindcss": "0.6.12",
     "shiki": "^3.4.2",
-    "vitest": "^2.1.8"
+    "vitest": "^2.1.9"
   }
 }
