--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "test:e2e:open": "cypress open"
   },
   "dependencies": {
+    "@astrojs/check": "^0.9.4",
     "@astrojs/sitemap": "^3.4.1",
     "@tailwindcss/vite": "^4.1.8",
     "astro": "^5.8.1",
     "daisyui": "^5.0.43",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
     "@stagewise/toolbar": "^0.3.0",
