--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
+    "@types/jsdom": "^21.1.7",
     "@types/node": "^22.10.2",
     "@typescript-eslint/eslint-plugin": "^8.33.1",
     "@typescript-eslint/parser": "^8.33.1",
